# Junior-Sale-Site

./: Cargo.toml  Trunk.toml  check.sh  index.html  rust-toolchain
assets/: sw.js
src/: app.rs  main.rs
