[package]
name = "junior_sale_site"
version = "0.1.0"
authors = ["José Porcar"]
edition = "2021"
rust-version = "1.67.0"

[dependencies]
egui = "0.22.0"
eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
egui-dropdown = "0.3.0"

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.29.0", features = ["bundled", "wasm32-wasi-vfs", "chrono"] }
chrono = "0.4.26"

# native:
[target.'cfg(not(target_arch = "wasm32-wasi"))'.dependencies]
env_logger = "0.10"
wasm-bindgen-futures = "0.4"

# web:
[target.'cfg(target_arch = "wasm32-wasi")'.dependencies]
wasm-bindgen-futures = "0.4"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
